--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,13 @@
 asgiref==3.6.0
-boto3==1.26.51
-botocore==1.29.51
-dj-database-url==0.5.0
-Django==3.2.16
-django-allauth==0.41.0
-django-countries==7.2.1
-django-crispy-forms==1.14.0
-django-storages==1.13.2
-gunicorn==20.1.0
-jmespath==1.0.1
+backports.zoneinfo==0.2.1
+dj-database-url==1.2.0
+Django==4.1.5
+django-admin-interface==0.24.2
+django-allauth==0.52.0
+django-colorfield==0.8.0
 oauthlib==3.2.2
 Pillow==9.4.0
-psycopg2==2.9.5
+PyJWT==2.6.0
 python3-openid==3.2.0
-pytz==2022.7
 requests-oauthlib==1.3.1
-s3transfer==0.6.0
 sqlparse==0.4.3
-stripe==5.0.0
