--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
+crispy-bootstrap5==0.7
 dj-database-url==1.2.0
 Django==4.1.5
 django-admin-interface==0.24.2
 django-allauth==0.52.0
 django-colorfield==0.8.0
+django-crispy-forms==2.0
 oauthlib==3.2.2
 Pillow==9.4.0
 PyJWT==2.6.0
