--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.1.5
 django-admin-interface==0.24.2
 django-allauth==0.52.0
 django-colorfield==0.8.0
+django-countries==7.5.1
 django-crispy-forms==2.0
 oauthlib==3.2.2
 Pillow==9.4.0
@@ -13,3 +14,4 @@ PyJWT==2.6.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
+stripe==5.2.0
