--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 asgiref==3.6.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 crispy-bootstrap5==0.7
-dj-database-url==1.2.0
+dj-database-url==0.5.0
 Django==4.1.5
 django-admin-interface==0.24.2
 django-allauth==0.52.0
 django-colorfield==0.8.0
-django-countries==7.5.1
+django-countries==7.2.1
 django-crispy-forms==2.0
+gocardless==0.5.3
+gunicorn==20.1.0
 oauthlib==3.2.2
 Pillow==9.4.0
+psycopg2==2.9.5
 PyJWT==2.6.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
 stripe==5.2.0
+
