--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.6.0
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
 boto3==1.26.84
 botocore==1.29.84
 crispy-bootstrap5==0.7
@@ -7,9 +7,11 @@ dj-database-url==0.5.0
 Django==4.1.5
 django-admin-interface==0.24.2
 django-allauth==0.52.0
+django-ckeditor==6.5.1
 django-colorfield==0.8.0
 django-countries==7.2.1
 django-crispy-forms==2.0
+django-js-asset==2.0.0
 django-storages==1.13.2
 gunicorn==20.1.0
 jmespath==1.0.1
