--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,12 @@ dj-database-url==0.5.0
 Django==4.1.5
 django-admin-interface==0.24.2
 django-allauth==0.52.0
-django-ckeditor==6.5.1
 django-colorfield==0.8.0
 django-countries==7.2.1
 django-crispy-forms==2.0
 django-js-asset==2.0.0
 django-storages==1.13.2
+django-tinymce==3.5.0
 gunicorn==20.1.0
 jmespath==1.0.1
 oauthlib==3.2.2
