--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 backports.zoneinfo==0.2.1;python_version<"3.9"
 boto3==1.26.84
 botocore==1.29.84
+coverage==7.2.1
 crispy-bootstrap5==0.7
 dj-database-url==0.5.0
 Django==4.1.5
@@ -19,7 +20,6 @@ oauthlib==3.2.2
 Pillow==9.4.0
 psycopg2==2.9.5
 PyJWT==2.6.0
-python-dateutil==2.8.2
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
